fix: change gap in param-list

--- a/frontend/src/scss/ui/_param-list.scss
+++ b/frontend/src/scss/ui/_param-list.scss
@@ -2,7 +2,7 @@
 
 .param-list {
   display: flex;
-  gap: 15px;
+  gap: 10px;
   color: rgba($primary-txt-color, 50%);
   font-size: 14px;
   font-style: normal;
