--- a/frontend/src/static/styles.css
+++ b/frontend/src/static/styles.css
@@ -535,7 +535,7 @@ template {
 ========================= */
 .param-list {
   display: flex;
-  gap: 15px;
+  gap: 10px;
   color: rgba(41, 42, 53, 0.5);
   font-size: 14px;
   font-style: normal;
